--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"author": "Sander",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0"
 	},
